--- a/css/layout.css
+++ b/css/layout.css
@@ -1,17 +1,18 @@
-body{
+body {
     display: grid;
     grid-template-columns: 100px 1fr 140px;
-    grid-template-areas: 
-    "head head head"     /*pagamina apjungta cele is triju celiu*/
-    "menu feed msg";
+    grid-template-areas:
+        "head head head"
+        "menu feed msg";
 }
-header{
-    grid-area: head;
-    background-color: blue;
-}
-aside{
 
-    background-color: grey;
+header {
+    grid-area: head;
+    background-color: #3366ff;
+}
+
+aside {
+    background-color: #ccc;
 }
 .menu {
     grid-area: menu;
@@ -19,6 +20,7 @@ aside{
 .messenger {
     grid-area: msg;
 }
-main{
-    
+
+main {
+    grid-area: feed;
 }
