--- a/css/posts.css
+++ b/css/posts.css
@@ -7,19 +7,27 @@
 }
     .post > .post-header {
         display: grid;
+        gap: 15px;
+        grid-template-columns: 50px 1fr 30px;
     }
-        .post > .post-header > .avatar{
-
+        .post > .post-header > .avatar-link{
+            width: 100%;
+        }
+        .post > .post-header > .avatar-link > .avatar {
+            width: 100%;
         }
         .post > .post-header > .post-user{
-.
+
         }
-            .post > .post-header > .post-user > user{
+            .post > .post-header > .post-user > .user {
 
             }
-            .post > .post-header > .post-user > .time{
+            .post > .post-header > .post-user > .timestamp {
 
             }
+        .post > .post-header > .fa {
+            
+        }
 
 
     .post > div {
