--- a/css/posts.css
+++ b/css/posts.css
@@ -34,6 +34,15 @@
         .post > div > p {
             padding: 10px;
         }
+            .post > div > p.hidden {
+                display: none;
+            }
+            .post > div.show > p {
+                display: none;
+            }
+            .post > div.show > p.hidden {
+                display: inline-block;
+            }
             .big-font {
                 font-size: 30px;
             }
@@ -49,44 +58,51 @@
             width: 100%;
             height: 300px;
         }
-            .post .gallery > img {
+            .post .gallery > .img {
                 display: inline-block;
                 width: 100%;
                 height: 100%;
                 float: left;
-                object-position: center;
-                object-fit: cover;
                 position: relative;
             }
+                .post .gallery > .img > img {
+                    display: inline-block;
+                    width: 100%;
+                    height: 100%;
+                    object-position: center;
+                    object-fit: cover;
+                }
             .post .gallery.gallery-2 {
                 height: 360px;
             }
-                .post .gallery.gallery-2 > img {
+                .post .gallery.gallery-2 > .img {
                     width: 50%;
                 }
             .post .gallery.gallery-3 {
                 height: 420px;
             }
-                .post .gallery.gallery-3 > img {
+                .post .gallery.gallery-3 > .img {
                     width: 50%;
                     height: 50%;
                 }
-                .post .gallery.gallery-3 > img:first-of-type {
+                .post .gallery.gallery-3 > .img:first-of-type {
                     width: 100%;
                 }
             .post .gallery.gallery-4 {
                 height: 440px;
             }
-                .post .gallery.gallery-4 > img {
+                .post .gallery.gallery-4 > .img {
                     width: 50%;
                     height: calc(100% / 3);
                 }
-                .post .gallery.gallery-4 > img:first-of-type {
+                .post .gallery.gallery-4 > .img:first-of-type {
                     height: 100%;
                 }
-        .post .gallery > img[data-extra]::before {
-            display: inline-block;
-            content: '3';
+        .post .gallery > .img[data-extra]::before {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            content: attr(data-extra);
             position: absolute;
             bottom: 0;
             right: 0;
@@ -94,9 +110,7 @@
             left: 0;
             background-color: #000c;
             color: #fff;
-            text-align: center;
             font-size: 40px;
-            line-height: 147px;
         }
     .post > footer {
 
